# benchback-rl

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_all_benchmarks.sh
.devcontainer/: devcontainer.json
benchback_runner/: pyproject.toml
configs/: linen.yaml  nnx.yaml  nnx_cache.yaml  nnx_jit.yaml  torch.yaml
docker/: .env  Dockerfile.dev  Dockerfile.run  docker-compose.dev.yml  docker-compose.run.yml
docs/: repo.md
libs/rl_linen/: pyproject.toml
libs/rl_nnx/: pyproject.toml
libs/rl_torch/: pyptoject.toml
results/: benchmark_env_timing.py  env_timing_results.json  env_timing_results.txt  generate_charts.py  v2_analyse.py  v2_exp1_cache.parquet  v2_exp2_cache.parquet  v2_exp3_cache.parquet  v2_generate_charts.py  wandb_runs_cache.parquet
scripts/: export_requirements.sh  identify-env-users.sh
setup/docker/: .env.example  Dockerfile.dev  Dockerfile.run  docker-compose.dev.yml  docker-compose.run.yml
setup/scripts/: create_env_for_dev.sh  export_requirements.sh
src/benchback_rl/: __main__.py
src/benchback_rl/benchmarks/: runner.py
src/benchback_rl/environment/: __init__.py  torch_env.py
src/benchback_rl/rl_common/: __init__.py  benchmark.py  config.py  memory_test.py
src/benchback_rl/rl_linen/: __init__.py  models.py  poo.py  ppo.py  ppo_old.py
src/benchback_rl/rl_linen/ppo/: __init__.py  rollout.py  train.py  update.py
src/benchback_rl/rl_nnx/: __init__.py  env.py  models.py  ppo.py  ppo_old.py
src/benchback_rl/rl_torch/: __init__.py  env.py  models.py  ppo.py
tests/environment/: test_torch_env.py
