[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchback-rl"
version = "0.1.0"
description = "Benchmarking Backends for RL - PyTorch, JAX with Flax.NNX, JAX with Flax.Linen"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT"}

authors = [
    { name = "Daniel Kluvanec"}
]

dependencies = [
    "jax>=0.7.2.dev0",
    "jaxlib>=0.7.2.dev0",
    "flax>=0.11.2",
    "optax>=0.2.6",
    "torch>=2.9.1",
    "numpy>=2.4.1",
    "gymnax>=0.0.9",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "tqdm>=4.67.1",
    "wandb>=0.24.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.13",
]

[project.urls]
"Homepage" = "https://github.com/KluvaDa/benchback-rl"

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
