[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchback-runner"
version = "0.1.0"
description = "Benchmarking runner for RL backends - PyTorch, JAX.NNX, Flax"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "rl-linen @ file:///${PROJECT_ROOT}/../libs/rl_linen",
    "rl-nnx @ file:///${PROJECT_ROOT}/../libs/rl_nnx",
    "rl-torch @ file:///${PROJECT_ROOT}/../libs/rl_torch",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
]
