[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl-nnx"
version = "0.1.0"
description = "jax and flax.nnx implementation of RL algorithms"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT"}

authors = [
    { name = "Daniel Kluvanec"}
]

dependencies = [
    "jax>=0.7.2",
    "jaxlib>=0.7.2",
    "flax>=0.11.2",
    "optax>=0.2.6",
    "numpy>=2.3.0",
]

[project.urls]
"Repository" = "https://github.com/KluvaDa/benchback-rl"